--- a/Spore/Spore.csproj
+++ b/Spore/Spore.csproj
@@ -184,6 +184,8 @@
     <None Include="Scripts\jquery-1.10.2.intellisense.js" />
     <Content Include="Images\analytics-min.jpg" />
     <Content Include="Images\banner-img.jpg" />
+    <Content Include="Images\construction.jpg" />
+    <Content Include="Images\design.jpg" />
     <Content Include="Images\hosting-min.jpg" />
     <Content Include="Images\icon-block.png" />
     <Content Include="Images\icon-globe.png" />
@@ -191,6 +193,7 @@
     <Content Include="Images\icon-rotate.png" />
     <Content Include="Images\logo-design-min.jpg" />
     <Content Include="Images\marketing-min.jpg" />
+    <Content Include="Images\notepad.jpg" />
     <Content Include="Images\seo-min.jpg" />
     <Content Include="Images\Spore_Logo.png" />
     <Content Include="Images\webdesign-min.jpg" />
