--- a/Spore/Spore.csproj
+++ b/Spore/Spore.csproj
@@ -180,6 +180,7 @@
     <Content Include="fonts\glyphicons-halflings-regular.ttf" />
     <Content Include="fonts\glyphicons-halflings-regular.eot" />
     <Content Include="Account\Web.config" />
+    <Content Include="Images\panda2.xcf" />
     <None Include="Properties\PublishProfiles\live.pubxml" />
     <None Include="Scripts\jquery-1.10.2.intellisense.js" />
     <Content Include="Images\analytics-min.jpg" />
@@ -194,6 +195,7 @@
     <Content Include="Images\logo-design-min.jpg" />
     <Content Include="Images\marketing-min.jpg" />
     <Content Include="Images\notepad.jpg" />
+    <Content Include="Images\panda_final.jpg" />
     <Content Include="Images\seo-min.jpg" />
     <Content Include="Images\Spore_Logo.png" />
     <Content Include="Images\webdesign-min.jpg" />
