--- a/Spore/Spore.csproj
+++ b/Spore/Spore.csproj
@@ -194,6 +194,7 @@
     <Content Include="Images\logo-design-min.jpg" />
     <Content Include="Images\marketing-min.jpg" />
     <Content Include="Images\notepad.jpg" />
+    <Content Include="Images\panda.jpg" />
     <Content Include="Images\seo-min.jpg" />
     <Content Include="Images\Spore_Logo.png" />
     <Content Include="Images\webdesign-min.jpg" />
