--- a/Spore/Spore.csproj
+++ b/Spore/Spore.csproj
@@ -197,6 +197,7 @@
     <Content Include="Images\marketing-min.jpg" />
     <Content Include="Images\notepad.jpg" />
     <Content Include="Images\panda.jpg" />
+    <Content Include="Images\panda_3.jpg" />
     <Content Include="Images\panda_final.jpg" />
     <Content Include="Images\seo-min.jpg" />
     <Content Include="Images\Spore_Logo.png" />
