--- a/Spore/Web.config
+++ b/Spore/Web.config
@@ -114,4 +114,11 @@
       <compiler language="vb;vbs;visualbasic;vbscript" extension=".vb" type="Microsoft.CodeDom.Providers.DotNetCompilerPlatform.VBCodeProvider, Microsoft.CodeDom.Providers.DotNetCompilerPlatform, Version=1.0.0.0, Culture=neutral, PublicKeyToken=31bf3856ad364e35" warningLevel="4" compilerOptions="/langversion:14 /nowarn:41008 /define:_MYTYPE=\&quot;Web\&quot; /optionInfer+" />
     </compilers>
   </system.codedom>
+  <system.net>
+    <mailSettings>
+      <smtp deliveryMethod="Network" from="contact &lt;contact@panda-webdesign.co.uk&gt;" >
+        <network host="webmail.panda-webdesign.co.uk" port="25" userName="contact@panda-webdesign.co.uk" password="LBaines96#" />
+      </smtp>
+    </mailSettings>
+  </system.net>
 </configuration>
